--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.85.3",
+    "path": "^0.12.7",
     "pdf-parse": "^1.1.1"
   }
 }
