--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "resume-analysis-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A resume analyzer using Gemini AI",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "fs": "^0.0.1-security",
+    "@google/generative-ai": "^0.1.0",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7",
     "pdf-parse": "^1.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
